<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context="com.android.example.bootcamptask5.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/itemDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:transitionName="image"
                tools:src="@mipmap/ic_launcher" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:titleTextColor="@android:color/white" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            style="@android:style/Theme.Material"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/personIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_person"
                app:layout_constraintEnd_toStartOf="@+id/dataIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/dataIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_data"
                app:layout_constraintBottom_toBottomOf="@+id/personIcon"
                app:layout_constraintEnd_toStartOf="@+id/categoryIcon"
                app:layout_constraintStart_toEndOf="@+id/personIcon"
                app:layout_constraintTop_toTopOf="@+id/personIcon" />

            <ImageView
                android:id="@+id/categoryIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_folder"
                app:layout_constraintBottom_toBottomOf="@+id/personIcon"
                app:layout_constraintEnd_toStartOf="@+id/descriptionIcon"
                app:layout_constraintStart_toEndOf="@+id/dataIcon"
                app:layout_constraintTop_toTopOf="@+id/personIcon" />

            <ImageView
                android:id="@+id/descriptionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:src="@drawable/ic_file"
                app:layout_constraintBottom_toBottomOf="@+id/personIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/categoryIcon"
                app:layout_constraintTop_toTopOf="@+id/personIcon" />


            <android.support.constraint.Guideline
                android:id="@+id/verticalGuideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.12" />

            <android.support.constraint.Guideline
                android:id="@+id/verticalGuideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.24" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontalGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/personIcon" />


            <ImageView
                android:id="@+id/dataArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personIcon" />

            <TextView
                android:id="@+id/dataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_label"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
                app:layout_constraintTop_toTopOf="@+id/dataArrow" />

            <TextView
                android:id="@+id/dataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_text"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
                app:layout_constraintTop_toBottomOf="@+id/dataLabel" />


            <ImageView
                android:id="@+id/categoryArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataText" />

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_label"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
                app:layout_constraintTop_toTopOf="@+id/categoryArrow" />

            <TextView
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
                app:layout_constraintTop_toBottomOf="@+id/categoryLabel" />


            <ImageView
                android:id="@+id/authorArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/categoryText" />

            <TextView
                android:id="@+id/authorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_label"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
                app:layout_constraintTop_toTopOf="@+id/authorArrow" />

            <TextView
                android:id="@+id/authorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/author_text"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
                app:layout_constraintTop_toBottomOf="@+id/authorLabel" />


            <ImageView
                android:id="@+id/descriptionArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/authorText" />

            <TextView
                android:id="@+id/descriptionLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline1"
                app:layout_constraintTop_toTopOf="@+id/descriptionArrow" />

            <TextView
                android:id="@+id/descriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/description_text"
                android:textColor="#FFFFFFFF"
                app:layout_constraintStart_toStartOf="@+id/verticalGuideline2"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
